--- a/src/main/resources/com/mycompany/mvvmexample/AccessFBView.fxml
+++ b/src/main/resources/com/mycompany/mvvmexample/AccessFBView.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="467.0" prefWidth="496.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="modelview.AccessFBView">
+<AnchorPane prefHeight="416.0" prefWidth="496.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="modelview.AccessFBView">
    <children>
       <VBox alignment="CENTER_RIGHT" layoutX="7.0" prefHeight="190.0" prefWidth="485.0" spacing="10.0">
          <children>
@@ -21,7 +22,13 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-      <TextArea fx:id="outputField" layoutX="6.0" layoutY="196.0" prefHeight="265.0" prefWidth="485.0" />
+      <TableView fx:id="outputField" layoutX="50.0" layoutY="180.0" prefHeight="236.0" prefWidth="496.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="180.0">
+        <columns>
+          <TableColumn fx:id="namecol" prefWidth="204.0" text="Name" />
+          <TableColumn fx:id="majorcol" prefWidth="172.0" text="Major" />
+            <TableColumn fx:id="agecol" prefWidth="119.0" text="Age" />
+        </columns>
+      </TableView>
    </children>
    <opaqueInsets>
       <Insets />
